# wabe-backend

./: .coverage  Makefile  docker-compose.yml  pyproject.toml  setup.cfg
config/: urls.py
config/settings/: common.py  local.py  production.py
docker/dokku/: Dockerfile
docker/local/: Dockerfile.web
wabe_content/: admin.py  apps.py  choices.py  models.py  serializers.py
wabe_content/migrations/: 0001_initial.py  0002_tone.py  0003_meaning.py  0004_auto_20221117_1947.py  0005_auto_20230120_1410.py  0006_auto_20230120_1438.py  0007_auto_20230625_2229.py  0008_alter_word_tree_node.py  0009_generalinformation.py  0010_migrate_word_fields_to_general_information.py  0011_auto_20230703_1815.py
