[tool]
[tool.poetry]
name = "wabe"
description = "This is the backend application for the Wabe-Project."
authors = ["Christian Grossmüller",]
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.8"
django = "*"
django-cleanup = "*"
django-cors-headers = "*"
django-environ = "*"
django-mptt = "*"
djangorestframework = "*"
gevent = "*"
gunicorn = "*"
markupsafe = "==1.1.1"
pillow = "*"
psycopg2-binary = "<2.9"
raven = "*"
solid-backend = {version = "*", allow-prereleases = true}
whitenoise = "*"
drf-spectacular = "^0.24.2"

[tool.poetry.dev-dependencies]
black = "19.10b0"
codecov = "*"
coverage = "*"
django-coverage-plugin = "*"
django-debug-toolbar = "*"
django-extensions = "*"
ipdb = "*"
pytest = "==5.3.5"
pytest-cov = "*"
pytest-django = "*"
pytest-isort = "*"
pytest-sugar = "*"
werkzeug = "<2.0.9"

[build-system]
# Should be the same as `$POETRY_VERSION`:
requires = ["poetry>=1.0.5"]
